gke/pablogarin-back/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pablogarin-backend
  namespace: pablogarin
  labels:
    app: pablogarin-bff
    test: test
  # annotations:
  #   fluxcd.io/tag.pablogarin-bff: semver:~1.0
  #   fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: pablogarin-bff
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pablogarin-bff
    spec:
      containers:
      - name: pablogarin-bff
        image: pablogarin/pablogarin-bff:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 3000
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
        # resources:
        #   requests:
        #     memory: "64Mi"
        #     cpu: "50m"
        #   limits:
        #     memory: "64Mi"
        #     cpu: "500m"
      # imagePullSecrets:
      #   - name: regcred
