gke/pablogarin-back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pablogarin-backend-service
  namespace: pablogarin
  labels:
    app: pablogarin-bff
spec:
  type: LoadBalancer
  selector:
    app: pablogarin-bff
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
